--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+.btn-link {
+ display: inline-block;
+ padding: 10px 20px;
+ background-color: orange;
+ color: white;
+ text-decoration: none;
+ border-radius: 5px;
+ font-weight: bold;
+ cursor: pointer;
+ margin-top: 20px;
+}
+
+.btn-link:hover {
+ background-color: darkorange;
+}
+
+
 /* rozmazané pozadí celé stránky */
 .bg {
   position: fixed;
