--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-.btn-link {
- display: inline-block;
- padding: 10px 20px;
- background-color: orange;
- color: white;
- text-decoration: none;
- border-radius: 5px;
- font-weight: bold;
- cursor: pointer;
- margin-top: 20px;
-}
-
-.btn-link:hover {
- background-color: darkorange;
-}
-
 
 /* rozmazané pozadí celé stránky */
 .bg {
@@ -51,6 +35,9 @@ body {
   align-items: center;
   padding-top: 60px; /* odsazení od horního okraje */
   z-index: 1; /* nad pozadím */
+}
+.left-link:hover {
+  color: darkorange;      /* efekt při najetí myší */
 }
 
 .left-bar p {
@@ -100,3 +87,4 @@ button {
   display: block;
   margin: 20px auto;
 }
+
