--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button {
 
 .gallery img {
   width: 200px;           /* velikost obrázku */
-  height: auto;
+  height: 200px;
   border-radius: 10px;
   cursor: pointer;        
   transition: transform 0.3s; /* efekt při hover */
@@ -107,4 +107,5 @@ button {
 .gallery img:hover {
   transform: scale(1.05);  /* mírné zvětšení při hover */
 }
+
 
